tests/fixtures/syntax/valid/logical_all_block.repor
case "logical all block" {
  $ true
  assert {
    all {
      exit 0
      stdout empty
    }
  }
}
