tests/fixtures/syntax/invalid/dir_expectation_first_form.repor
case "expectation-first dir form is rejected" {
  $ true
  assert {
    dir exists "out"
  }
}
